<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Results</string>
    <string name="title_section1">Results</string>
    <string name="title_section2">Setup</string>
    <string name="title_section3">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="login_header">Login</string>
    <string name="register_header">Register</string>
    <string name="action_register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="results_refresh">Refresh</string>
    <string name="results_change_session">Change session</string>
    <string name="results_header_name">Name</string>
    <string name="results_header_result">Result</string>
    <string name="results_header_average">Average</string>
    <string name="results_total">Total</string>
    <string name="results_final_grade">Final grade</string>
    <string name="results_no_results">No results</string>
    <string name="crawler_config">Configuration</string>
    <string name="crawler_uqam_code">Code</string>
    <string name="crawler_uqam_nip">Nip</string>
    <string name="crawler_notification_email">Notification email</string>
    <string name="crawler_state">State</string>
    <string name="crawler_classes">Classes</string>
</resources>
